# numpes

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish-package.yml  run-package-tests.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst
examples/: example_polytope_2d.py
src/numpes/: __init__.py  polytope.py
tests/: test_polytope.py
