[project]
name = "numpes"
dynamic = ["version"]
dependencies = [
  "numpy",
]
requires-python = ">=3.14"
authors = [
  {name = "Bart Wolleswinkel", email = "b.wolleswinkel@tudelft.nl"}
]
description = "Numerical operations on polytopes, ellipsoids, and subspaces"
readme = "README.md"
# TODO: Add license
# TODO: Add more keywords
keywords = ["polytope"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
