[project]
name = "numpes"
dynamic = ["version"]
dependencies = [
  "numpy",
]
requires-python = ">=3.14"
authors = [
  {name = "Bart Wolleswinkel", email = "b.wolleswinkel@tudelft.nl"}
]
description = "Numerical operations on polytopes, ellipsoids, and subspaces"
readme = "README.md"
license = "GPL-3.0"
# TODO: Add more keywords
keywords = ["polytope"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.tox]
env_list = ["3.14"]

[tool.tox.env_run_base]
description = "Run tests"
deps = ["pytest", "pytest-cov"]
commands = [["pytest", "--cov=src/numpes", "--cov-report=term-missing", "--no-cov-on-fail"]]
package = "editable"
set_env.COVERAGE_FILE = "{temp_dir}/.coverage"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
skip_covered = false
skip_empty = true
show_missing = true
